Fixed opponent answer not showing bug

--- a/Project03/django_project/static/style.css
+++ b/Project03/django_project/static/style.css
@@ -140,7 +140,17 @@ font-size: 1.15rem !important;
 }
 
 .bg-disabled {
-    background: #8b9299;
+    background: #8b9299 !important;
+    cursor: default;
+}
+
+.bg-disabled:hover {
+    background: #8b9299 !important;
+}
+
+.bg-disabled:active {
+    background: #8b9299 !important;
+
 }
 
 .greycircle {
